--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casey Manion's Lab 6</title>
+    <title>Casey Manion's Labs 6 and 7</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <div class="header">
-        <h1 class="title is-1 has-text-centered">Casey Manion's Lab 6</h1>
-        <h2 class="subtitle is-5 has-text-centered">Campus Dining Halls</h2>
-    </div>
+    <h1 class="title is-1 has-text-centered">Casey Manion's Lab 6 and 7</h1>
 
+    <h2 class="subtitle is-5 has-text-centered">Meal Macros</h2>
+    <div class="chartContainer" id="chart"></div>
+    <table class="table" id="meals"></table>
+    
+
+
+    <h2 class="subtitle is-5 has-text-centered">Campus Dining Halls</h2>
     <div class="container">
         <!-- Dining Halls Table -->
         <table class="table is-bordered is-striped">
@@ -31,5 +35,6 @@
     
     <!-- connect Javascript file -->
     <script src="scripts.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js" integrity="sha512-FJ2OYvUIXUqCcPf1stu+oTBlhn54W0UisZB/TNrZaVMHHhYvLBV9jMbvJYtvDe5x/WVaoXZ6KB+Uqe5hT2vlyA==" crossorigin="anonymous"></script>
 </body>
 </html>
