UPDATE: html & script tags for stacked bar chart

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,8 @@
     <h1 class="title is-1 has-text-centered">Casey Manion's Lab 6 and 7</h1>
 
     <h2 class="subtitle is-5 has-text-centered">Meal Macros</h2>
-    <div class="chartContainer" id="chart"></div>
+    <div id="chartContainer"></div>
     <table class="table" id="meals"></table>
-    
-
 
     <h2 class="subtitle is-5 has-text-centered">Campus Dining Halls</h2>
     <div class="container">
